[package]
name = "bit_ops"
description = """
Bitwise operations on primitive integer types, but no_std and const-compatible.
Provides a collection of typical bit manipulation operations that are primarily
required in low-level development. Unlike other crates that provide tooling to
create sophisticated high-level types with bitfields, the focus of bit_ops is
to work on raw integers. Thus, bit_ops chose a manual and more direct approach.
"""
version = "0.1.0"
edition = "2021"
authors = [
    "Philipp Schuster <phip1611@gmail.com>"
]

[dependencies]
paste = "1.0.15"
