[package]
name = "bit_ops"
description = """
Common bit-oriented operations on primitive integer types with a focus on
`no_std` and `const` compatibility. Unlike other crates that provide tooling to
create sophisticated high-level types with bitfields, the focus of `bit_ops` is
on raw primitive integer types.
"""
version = "0.1.16"
edition = "2021"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]
keywords = ["bitwise", "bits"]
categories = ["no-std", "no-std::no-alloc", "data-structures", "encoding"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/bit_ops"
repository = "https://github.com/phip1611/bit_ops"
documentation = "https://docs.rs/bit_ops"
rust-version = "1.57" # MSRV

[dependencies]
paste = "1.0.15"
