[package]
name = "bit_ops"
description = """
Common bit-oriented operations on primitive integer types with a focus on
`no_std` and `const` compatibility. Unlike other crates that provide tooling to
create sophisticated high-level types with bitfields, the focus of `bit_ops` is
on raw primitive integer types.
"""
version = "0.2.1"
edition = "2024"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]
keywords = ["bitwise", "bits"]
categories = ["no-std", "no-std::no-alloc", "data-structures", "encoding"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/bit_ops"
repository = "https://github.com/phip1611/bit_ops"
documentation = "https://docs.rs/bit_ops"
rust-version = "1.85.1" # MSRV

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
paste = "1.0.15"
wide = "0.8.2"

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[[bench]]
name = "bitmap_iter"
harness = false
